tests/miniJava/neg/005852_mutation.MiniJava
class java { public static void Main ( String [ ] java ) { new if ( 0 ) { } else { } } }
